General layout cross at breakpoint

--- a/rsvp-form.html
+++ b/rsvp-form.html
@@ -12,25 +12,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@23.3.2/build/css/intlTelInput.css">
         <link rel="stylesheet" href="css/common.css">
     </head>
-    <body class="bg-off-white">
-        <header class="bg-white">
-            <div class="invisible-row-20"></div>
-            <nav>
-                <ul class="flex column-gap-50 center-aligned
-                           sans-serif thin">
-                    <li><a class="link" href="itinerary">Itinerary</a></li>
-                    <li><a class="link" href="accomodations">Accomodations</a></li>
-                    <li><a class="link" href="faq">FAQ</a></li>
-                    <li class="text-light-gray">Style Guide</li>
-                    <li class="text-light-gray">Our Story</li>
-                </ul>
-            </nav>
-            <div class="invisible-row-20
-                        shadow-bottom-black"></div>
-        </header>
+    <body class="desktop-bg-off-white">
         <main>
-            <div class="invisible-row-50"></div>
-            <section class="width-60-percent max-width-1000 margin-auto
+            <div class="mobile-display-none invisible-row-50"></div>
+            <section class="desktop-width-60-percent margin-auto
                             bg-white">
                     
                 <div id="progress-bar" class="grid seven-1fr-cols column-gap-1">
@@ -81,6 +66,6 @@
                 }
             }
         </script>
-        <script type="module" src="js/main.js"></script>
+        <script type="module" src="tests/main.js"></script>
     </body>
 </html>
