--- a/rsvp-form.html
+++ b/rsvp-form.html
@@ -66,6 +66,6 @@
                 }
             }
         </script>
-        <script type="module" src="tests/main.js"></script>
+        <script type="module" src="js/main.js"></script>
     </body>
 </html>
