Set up email retrieval of RSVP link + style guide

--- a/accomodations.html
+++ b/accomodations.html
@@ -20,7 +20,7 @@
                     <li><a href="itinerary">Itinerary</a></li>
                     <li class="active">Accomodations</li>
                     <li><a href="faq">FAQ</a></li>
-                    <li class="coming-soon">Style Guide</li>
+                    <li><a href="pdf/style-guide.pdf" target="_blank">Style Guide</a></li>
                     <li class="coming-soon">Our Story</li>
                 </ul>
             </nav>
