--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,7 @@
                     <li><a href="itinerary">Itinerary</a></li>
                     <li><a href="accomodations">Accommodations</a></li>
                     <li class="active">FAQ</li>
-                    <li class="coming-soon">Style Guide</li>
+                    <li><a href="pdf/style-guide.pdf" target="_blank">Style Guide</a></li>
                     <li class="coming-soon">Our Story</li>
                 </ul>
             </nav>
