--- a/itinerary.html
+++ b/itinerary.html
@@ -20,7 +20,7 @@
                     <li class="active">Itinerary</li>
                     <li><a href="accomodations">Accomodations</a></li>
                     <li><a href="faq">FAQ</a></li>
-                    <li class="coming-soon">Style Guide</li>
+                    <li><a href="pdf/style-guide.pdf" target="_blank">Style Guide</a></li>
                     <li class="coming-soon">Our Story</li>
                 </ul>
             </nav>
