--- a/rsvp.html
+++ b/rsvp.html
@@ -5,13 +5,13 @@
         <meta property="og:image" content="images/thumbnail.jpg">
         <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 
-        <title>Home | Kimia & Paul - Destination Wedding</title>
+        <title>Request RSVP Link | Kimia & Paul - Destination Wedding</title>
         <!-- Import Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/shared.css">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/common.css">
     </head>
     <body>
         <header>
@@ -27,14 +27,17 @@
             </nav>
         </header>
         <main>
-            <img id="banner-landscape" src="images/home-banner-landscape.jpg">
-            <img id="banner-portrait" src="images/home-banner-portrait.jpg">
-            <section id="wedding-summary">
-                <p id="couple"><span class="dash">&#8210;</span><span class="inline-spacer"></span>KIMIA<span class="inline-spacer"></span>&<span class="inline-spacer"></span>PAUL<span class="inline-spacer"></span><span class="dash">&#8210;</span></p>
-                <p class="wedding-details">December 12-14 2024</p>
-                <p class="wedding-details">Mauna Lani Hawaii</p>
-            </section>
+            <div class="text-align-center" style="padding-top: 100px;">
+                <div><label for="email" class="sans-serif" style="font-size: 24px; font-weight: 500;" id="label">Enter your email</label></div>
+                <div class="empty-row-20"></div>
+                <div><img src="images/rsvp-icon.svg" style="max-width: 128px; width: 30%;"></div>
+                <div class="empty-row-10"></div>
+                <div><input class="text-input sans-serif" type="email" name="email" id="email" style="max-width: 256px; width: 60%;"></div>
+                <div id="instructions" class="sans-serif"></div>
+                <div style="margin-top: 40px;"><div class="button inline sans-serif" id="get-link-button">GET LINK</div></div>
+            </div>
         </main>
         <script src="js/toggle-menu.js"></script>
+        <script src="js/get-rsvp-link.js" type="module"></script>
     </body>
 </html>
