--- a/rsvp-form.html
+++ b/rsvp-form.html
@@ -10,62 +10,25 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@23.3.2/build/css/intlTelInput.css">
-        <link rel="stylesheet" href="css/common.css">
+
+        <!-- Custom styling -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intl-tel-input@23.3.2/build/css/intlTelInput.css">
+        <link rel="stylesheet" href="css/rsvp.css">
     </head>
-    <body class="desktop-bg-off-white">
+    <body>
         <main>
-            <div class="mobile-display-none invisible-row-50"></div>
-            <section class="desktop-width-60-percent margin-auto
-                            bg-white">
-                    
-                <div id="progress-bar" class="grid seven-1fr-cols column-gap-1">
-                    <div class="bg-gray height-10"></div>
-                    <div class="bg-gray height-10"></div>
-                    <div class="bg-gray height-10"></div>
-                    <div class="bg-gray height-10"></div>
-                    <div class="bg-gray height-10"></div>
-                    <div class="bg-gray height-10"></div>
-                    <div class="bg-gray height-10"></div>
-                </div>
-                <form id="form" class="side-padding-50 text-align-center display-none">
-                    <div class="empty-row-30"></div>
-                    <h1 id="title" class="serif text-brown thick text-wrap-balance"></h1>
-                    <div class="empty-row-30"></div>
-                    <div class="sans-serif">
-                        <div id="root"></div>
-                        <div class="empty-row-30"></div>
-                        <div class="font-size-20">
-                            <button id="previous-button" class="button">PREVIOUS
-                            </button><span class="empty-column-10">
-                            </span><button id="next-button" class="button">NEXT</button>
-                        </div>
-                    </div>
-                    <div class="invisible-row-50"></div>
-                </form>
-                <div id="loading-container" class="text-align-center">
-                    <div class="empty-row-50"></div>
-                    <div class="loading-loop"><div></div><div></div><div></div><div></div></div>
-                    <div class="empty-row-20"></div>
-                    <p class="sans-serif loading-ellipsis">Loading</p>
-                    <div class="invisible-row-50"></div>
-                </div>
-            </section>
+            <div class="loading-loop"><div></div><div></div><div></div><div></div></div>
+            <section id="general-attendance"></section>
+            <section id="event-attendance"></section>
+            <section id="transport-requests"></section>
+            <section id="food-allergies"></section>
+            <section id="age-groups"></section>
+            <section id="whatsapp"></section>
+            <section id="song-requests"></section>
         </main>
-        <script type="importmap">
-            {
-                "imports": {
-                    "base": "./js/base.js",
-                    "element": "./js/element.js",
-                    "components": "./js/components.js",
-                    "wrappers": "./js/wrappers.js",
-                    "templates": "./js/templates.js",
-                    "form": "./js/form.js",
-                    "router": "./js/router.js",
-                    "intl-tel-input": "https://cdn.jsdelivr.net/npm/intl-tel-input@23.3.2/build/js/intlTelInput.min.js",
-                    "request": "./js/request.js"
-                }
-            }
-        </script>
-        <script type="module" src="js/main.js"></script>
+        <script src="js/nunjucks.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@23.3.2/build/js/intlTelInput.min.js"></script>
+        <script src="js/templates.js"></script>
+        <script type="module" src="js/rsvp.js"></script>
     </body>
 </html>
