--- a/rsvp.html
+++ b/rsvp.html
@@ -3,15 +3,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no"> <!-- Gets rid of auto-phone number detection on Safari -->
         <meta property="og:image" content="images/thumbnail.jpg">
-        <link rel="icon" type="image/x-icon" href="images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 
-        <title>Home | Kimia & Paul - Destination Wedding</title>
+        <title>Request RSVP Link | Kimia & Paul - Destination Wedding</title>
         <!-- Import Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/shared.css">
-        <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/common.css">
     </head>
     <body>
@@ -22,22 +21,23 @@
                     <li><a href="itinerary">Itinerary</a></li>
                     <li><a href="accomodations">Accomodations</a></li>
                     <li><a href="faq">FAQ</a></li>
-                    <li class="coming-soon">Style Guide</li>
+                    <li><a href="pdf/style-guide.pdf" target="_blank">Style Guide</a></li>
                     <li class="coming-soon">Our Story</li>
                 </ul>
             </nav>
         </header>
-        <main style="text-align: center; padding-top: 100px;">
-            <div>
-                <label for="email" style="font-family: 'Raleway', sans-serif; font-weight: 500; font-size: 20px;">Enter your e-mail</label>
-            </div>
-            <div style="margin-top: 10px; margin-bottom: 30px;">
-                <input class="text-input sans-serif" type="email" name="email" id="email" style="width: 300px; padding: 10px;">
-            </div>
-            <div>
-                <div class="button sans-serif inline">Get Link</div>
+        <main>
+            <div class="text-align-center" style="padding-top: 100px;">
+                <div><label for="email" class="sans-serif" style="font-size: 24px; font-weight: 500;" id="label">Enter your email</label></div>
+                <div class="empty-row-20"></div>
+                <div><img src="images/rsvp-icon.svg" style="max-width: 128px; width: 30%;"></div>
+                <div class="empty-row-10"></div>
+                <div><input class="text-input sans-serif" type="email" name="email" id="email" style="max-width: 256px; width: 60%;"></div>
+                <div id="instructions" class="sans-serif"></div>
+                <div style="margin-top: 40px;"><div class="button inline sans-serif" id="get-link-button">GET LINK</div></div>
             </div>
         </main>
         <script src="js/toggle-menu.js"></script>
+        <script src="js/get-rsvp-link.js" type="module"></script>
     </body>
 </html>
