--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="itinerary">Itinerary</a></li>
                     <li><a href="accomodations">Accomodations</a></li>
                     <li><a href="faq">FAQ</a></li>
-                    <li class="coming-soon">Style Guide</li>
+                    <li><a href="pdf/style-guide.pdf" target="_blank">Style Guide</a></li>
                     <li class="coming-soon">Our Story</li>
                 </ul>
             </nav>
